# SQLRMT

./: CHANGELOG.md  LICENSE  README.md  client.crt  client.key  config.ini  log.sh  pyproject.toml  requirements.txt  server.crt  server.key  sqlrmt.py
modules/: logger.py
modules/client/: client.py
modules/extensions/: example.py  loader.py
modules/server/: database.py  server.py
